Fix incorrect color values. Update colors for contrast

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-  background-color: hsl(286, 100%, 93%);
+  background-color: rgb(49, 14, 113);
 }
 
 main {
@@ -7,6 +7,7 @@ main {
   flex-direction: column;
   align-items: center;
   font-family: "Roboto", sans-serif;
+  color: white;
 }
 
 #legend {
